Bug 51478 - T() does not work in array context
Summary: T() does not work in array context
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3
Keywords:
Depends on:
Blocks: Calc-Function
  Show dependency treegraph
 
Reported: 2012-06-27 07:19 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2017-11-06 11:46 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
testcases (10.04 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-27 07:32 UTC, Eike Rathke (retired, only occasionally showing up)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2012-06-27 07:19:02 UTC
Using T() in array context as in {=T(A1:A2)} generates Err:517 instead of proper results.
Comment 1 Eike Rathke (retired, only occasionally showing up) 2012-06-27 07:32:58 UTC
Created attachment 63522 [details]
testcases
Comment 3 Not Assigned 2012-07-02 02:29:45 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6096e8990329d286a5e666643517ba4aa82d4161&g=libreoffice-3-6

propagate error in ScInterpreter::GetDoubleOrStringFromMatrix() (fdo#51478 dependency)


It will be available in LibreOffice 3.6.
Comment 4 Not Assigned 2012-07-02 02:30:10 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8092e757780b38c97e1ad3bf6f76a132b6b63d2&g=libreoffice-3-6

resolved fdo#51478 handle array context in T()


It will be available in LibreOffice 3.6.