propagate error in ScInterpreter::GetDoubleOrStringFromMatrix() (fdo#51478 dependency)

Change-Id: Iadba0f3a28b0a3bda9b99833510e68679d915514
(cherry picked from commit 72b4cb18a402338dd65d24d9da8da7fe0fa33db0)