sc/source/core/tool/interpr4.cxx
@@ -2453,6 +2453,13 @@ ScMatValType ScInterpreter::GetDoubleOrStringFromMatrix( double& rDouble,
     else
         rString = nMatVal.GetString();
 
+    if (ScMatrix::IsValueType( nMatValType))
+    {
+        sal_uInt16 nError = nMatVal.GetError();
+        if (nError)
+            SetError( nError);
+    }
+
     return nMatValType;
 }
 
